# hopper

./: .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_INTEGRATION_COMPLETE.md  PHASE_1_COMPLETE.md  README.md  TASK_1_COMPLETE.md  TEST_RESULTS.md  WORKER_IDENTITY.md  alembic.ini  check_dependencies.sh  docker-compose.yml  pyproject.toml
.czarina/: CZAR_IDENTITY.md  README.md  config.json
.czarina-archive-phase1/: CZAR_IDENTITY.md  config.json
.czarina-archive-phase1/workers/: api-core.md  instance-architecture.md  project-setup.md  testing.md
.czarina/workers/: cli-tool.md  database.md  delegation-protocol-knowledge.md  delegation-protocol.md  instance-api-knowledge.md  instance-api.md  instance-cli-knowledge.md  instance-cli.md  instance-registry.md  instance-visualization.md  integration-knowledge.md  integration.md  mcp-integration.md  routing-engine.md  scope-behaviors-knowledge.md  scope-behaviors.md  task-delegation-knowledge.md  task-delegation.md  testing-knowledge.md  testing.md
.github/workflows/: ci.yml
.hopper/: mcp-server.json
alembic/: env.py
alembic/versions/: 20251228_0033-233e207e2773_initial_schema.py
archive/phase1-reports/: COMPLETION_SUMMARY.md  CZAR_DELIVERY_REPORT.md  FINAL_INTEGRATION_STATUS.md  INTEGRATION_CHECKLIST.md  INTEGRATION_STATUS.md  INTEGRATION_STRATEGY.md  MERGE_COMPLETE.md  STATUS.md  TEST_FIX_STRATEGY.md  TEST_IMPROVEMENTS_SUMMARY.md
completions/: README.md  hopper.bash  hopper.fish  hopper.zsh
config/: routing-rules.yaml
docs/: ARCHITECTURE.md  Hopper.Federation.Addendum.with.IPoverAvian.md  Hopper.Specification.Addendum.md  Hopper.Specification.md  cli-guide.md  database-schema.md  database-usage.md  local-mode-guide.md  local-storage-spec.md  mcp-integration.md  multi-instance-guide.md  routing-guide.md  server-storage-spec.md  testing.md
inbox/: README.md
plans/: Hopper-Implementation-Details.md  Hopper-Implementation-Plan.md  Hopper-Implementation-Summary.md  Hopper-Testing-and-Deployment.md  Phase-2-Multi-Instance-Plan.md  Phase-3-Memory-Learning-Plan.md
scripts/: db-reset.sh  dev-setup.sh  run-tests.sh  seed-db.py
src/hopper/: __init__.py
src/hopper/api/: __init__.py  app.py  dependencies.py  exceptions.py
src/hopper/api/routes/: __init__.py  delegations.py  instances.py  learning.py  tasks.py
src/hopper/api/schemas/: __init__.py  common.py  hopper_instance.py  learning.py  project.py  routing_decision.py  task.py  task_delegation.py
src/hopper/cli/: __init__.py  client.py  config.py  local_client.py  main.py  mcp_commands.py  output.py
src/hopper/cli/commands/: config.py  instance.py  learning.py  project.py  server.py  task.py
src/hopper/config/: __init__.py  settings.py
src/hopper/database/: __init__.py  connection.py  init.py  utils.py
src/hopper/database/repositories/: __init__.py  base.py  hopper_instance_repository.py  project_repository.py  routing_decision_repository.py  task_delegation_repository.py  task_repository.py
src/hopper/delegation/: __init__.py  completion.py  delegator.py  policies.py  router.py
src/hopper/intelligence/: __init__.py  base.py  decision_recorder.py  feedback.py  types.py
src/hopper/intelligence/rules/: __init__.py  config.py  engine.py  matchers.py  rule.py  scoring.py
src/hopper/intelligence/scopes/: __init__.py  base.py  factory.py  global_scope.py  orchestration_scope.py  project_scope.py
src/hopper/mcp/: __init__.py  config.py  context.py  main.py  server.py
src/hopper/mcp/resources/: __init__.py  project_resources.py  task_resources.py
src/hopper/mcp/tools/: __init__.py  project_tools.py  routing_tools.py  task_tools.py
src/hopper/memory/: __init__.py
src/hopper/memory/consolidated/: __init__.py  extractor.py  models.py  store.py
src/hopper/memory/episodic/: __init__.py  models.py  store.py
src/hopper/memory/feedback/: __init__.py  analytics.py  store.py
src/hopper/memory/learning/: __init__.py  engine.py  suggestion.py
src/hopper/memory/search/: __init__.py  searcher.py  similarity.py
src/hopper/memory/working/: __init__.py  context.py  memory.py
src/hopper/memory/working/backends/: __init__.py  base.py  local.py  redis.py
src/hopper/models/: __init__.py  base.py  enums.py  external_mapping.py  hopper_instance.py  project.py  routing_decision.py  task.py  task_delegation.py  task_feedback.py
src/hopper/storage/: __init__.py  base.py  markdown.py  memory.py  tasks.py
tests/: README.md  __init__.py  conftest.py  factories.py  utils.py
tests/api/: test_instances.py  test_learning.py
tests/cli/: conftest.py  test_config_commands.py  test_instance_commands.py  test_local_mode_cli.py  test_output.py  test_project_commands.py  test_task_commands.py
tests/config/: __init__.py  test_settings.py
tests/database/: test_connection.py  test_init.py  test_project_repository.py  test_task_repository.py  test_utils.py
tests/e2e/: test_task_lifecycle.py
tests/fixtures/: routing_rules.yaml
tests/fixtures/configuration/: test_config.yaml
tests/fixtures/projects/: sample_projects.json
tests/fixtures/tasks/: sample_tasks.json
tests/integration/: test_api_auth.py  test_api_database.py  test_api_routing.py  test_cli_api.py  test_mcp_api.py
tests/mcp/: conftest.py  test_context.py  test_project_tools.py  test_resources.py  test_routing_tools.py  test_task_tools.py
tests/models/: __init__.py  test_hopper_instance.py  test_project.py  test_routing_decision.py  test_task.py  test_task_delegation.py
tests/phase2/: __init__.py  conftest.py  test_delegation_flow.py  test_delegator.py  test_scope_behaviors.py
tests/phase3/: conftest.py  test_consolidated.py  test_episodic_store.py  test_feedback.py  test_learning.py  test_semantic_search.py  test_working_memory.py
tests/storage/: test_local_storage.py
tests/validation/: test_phase1_criteria.py
